new project added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 </head>
 <body>
     <!---------------- intro ------------->
-    <header class="header">
         <nav class="nav">
             <ul class="nav__items">
                 <li class="nav__item"><a href="#about" class="nav__link">About</a></li>
@@ -21,7 +20,6 @@
                 <li class="nav__item"><a href="#contact" class="nav__link">Contact</a></li>
             </ul>
         </nav>
-    </header>
     <main>
         <section class="section-about" id="about">
             <h1 class="heading-primary">
@@ -33,6 +31,10 @@
         <section class="section-projects" id="projects">
             <h2 class="heading-secondary">These are some of my projects</h2>
             <div class="section-projects-grid">
+                <a href="https://food-order-app-green.vercel.app/" class="project">
+                    <img src="./img/project-6-food-order-app.jpg" alt="project" class="project-image">
+                    <p class="project-title">Food order app</p>
+                </a>
                 <a href="https://forkify-sooty.vercel.app/" class="project">
                     <img src="./img/project-5-forkify.jpg" alt="project" class="project-image">
                     <p class="project-title">Forkify food app</p>
