crwn-clothing added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <section class="section-projects" id="projects">
             <h2 class="heading-secondary">These are some of my projects</h2>
             <div class="section-projects-grid">
+                
+                <a href="https://nextjs-crwn-clothing-silk.vercel.app" class="project main-project">
+                    <img src="./img/project-7-crwn-clothing.jpg" alt="project" class="project-image">
+                    <p class="project-title">Crwn Clothing</p>
+                </a>
                 <a href="https://food-order-app-green.vercel.app/" class="project">
                     <img src="./img/project-6-food-order-app.jpg" alt="project" class="project-image">
                     <p class="project-title">Food order app</p>
