new project added

--- a/index.html
+++ b/index.html
@@ -29,12 +29,16 @@
         </section>
 
         <section class="section-projects" id="projects">
+          <div class="section-projects-container">
             <h2 class="heading-secondary">These are some of my projects</h2>
             <div class="section-projects-grid">
-                
                 <a href="https://nextjs-crwn-clothing-silk.vercel.app" class="project main-project">
                     <img src="./img/project-7-crwn-clothing.jpg" alt="project" class="project-image">
-                    <p class="project-title">Crwn Clothing</p>
+                    <p class="project-title">Crwn Clothing - Next JS</p>
+                </a>
+                <a href="https://nextjs-crwn-clothing-silk.vercel.app" class="project main-project">
+                    <img src="./img/project-8-nextjs-events.jpg" alt="project" class="project-image">
+                    <p class="project-title">NextEvents - Next JS</p>
                 </a>
                 <a href="https://food-order-app-green.vercel.app/" class="project">
                     <img src="./img/project-6-food-order-app.jpg" alt="project" class="project-image">
@@ -61,6 +65,7 @@
                     <p class="project-title">Trillo</p>
                 </a>
             </div>
+          </div>
         </section>
 
         <section class="section-work" id="work">
