--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
                     <img src="./img/project-6-food-order-app.jpg" alt="project" class="project-image">
                     <p class="project-title">Food order app</p>
                 </a>
-                <a href="https://forkify-sooty.vercel.app/" class="project">
+                <a href="https://forkify-react-version.vercel.app/" class="project">
                     <img src="./img/project-5-forkify.jpg" alt="project" class="project-image">
-                    <p class="project-title">Forkify food app</p>
+                    <p class="project-title">Forkify food app - React Version</p>
                 </a>
                 <a href="https://bankist-two.vercel.app/" class="project">
                     <img src="./img/project-4-bankist.jpg" alt="project" class="project-image">
