new project added

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
           <div class="section-projects-container">
             <h2 class="heading-secondary">These are some of my projects</h2>
             <div class="section-projects-grid">
-                <a href="https://nextjs-crwn-clothing-silk.vercel.app" class="project main-project">
-                    <img src="./img/project-7-crwn-clothing.jpg" alt="project" class="project-image">
-                    <p class="project-title">Crwn Clothing - Next JS</p>
+                <a href="https://www.lifetimefashion.store/" class="project main-project">
+                    <img src="./img/project-7-lifetime-fashion" alt="project" class="project-image">
+                    <p class="project-title">Lifetime Fashion - Next JS</p>
                 </a>
                 <a href="https://nextjs-crwn-clothing-silk.vercel.app" class="project main-project">
                     <img src="./img/project-8-nextjs-events.jpg" alt="project" class="project-image">
