fixed lifetime fashion img

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <h2 class="heading-secondary">These are some of my projects</h2>
             <div class="section-projects-grid">
                 <a href="https://www.lifetimefashion.store/" class="project main-project">
-                    <img src="./img/project-7-lifetime-fashion" alt="project" class="project-image">
+                    <img src="./img/project-7-lifetime-fashion.jpg" alt="project" class="project-image">
                     <p class="project-title">Lifetime Fashion - Next JS</p>
                 </a>
                 <a href="https://nextjs-crwn-clothing-silk.vercel.app" class="project main-project">
